--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "gsap": "^3.11.4",
+    "locomotive-scroll": "^4.1.4",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-locomotive-scroll": "^0.2.2",
     "typescript": "4.9.4"
   },
   "devDependencies": {
@@ -42,7 +45,6 @@
     "eslint-plugin-tailwindcss": "^3.8.0",
     "eslint-plugin-testing-library": "^5.9.1",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "gsap": "^3.11.4",
     "postcss": "^8.4.20",
     "prettier": "^2.8.1",
     "tailwindcss": "^3.2.4"
