--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "gsap": "^3.11.4",
     "locomotive-scroll": "^4.1.4",
     "next": "13.1.1",
+    "next-transpile-modules": "^10.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-locomotive-scroll": "^0.2.2",
+    "ts-node": "^10.9.1",
     "typescript": "4.9.4"
   },
   "devDependencies": {
-    "@types/gsap": "^3.0.0",
+    "@types/locomotive-scroll": "^4.1.0",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "autoprefixer": "^10.4.13",
