--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gsap": "^3.11.4",
     "locomotive-scroll": "^4.1.4",
     "next": "13.1.1",
+    "next-seo": "^5.15.0",
     "next-transpile-modules": "^10.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
