--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-locomotive-scroll": "^0.2.2",
+    "react-yandex-metrika": "^2.6.0",
     "ts-node": "^10.9.1",
     "typescript": "4.9.4"
   },
