--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@types/styled-components": "^5.1.26",
     "gsap": "^3.11.4",
     "locomotive-scroll": "^4.1.4",
     "next": "13.1.1",
@@ -23,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-locomotive-scroll": "^0.2.2",
     "react-yandex-metrika": "^2.6.0",
+    "styled-components": "^5.3.6",
     "ts-node": "^10.9.1",
     "typescript": "4.9.4"
   },
