--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "13.1.1",
     "next-seo": "^5.15.0",
     "next-transpile-modules": "^10.0.0",
+    "polished": "^4.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-locomotive-scroll": "^0.2.2",
