--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "@types/styled-components": "^5.1.26",
+    "framer-motion": "^10.0.0",
     "gsap": "^3.11.4",
     "locomotive-scroll": "^4.1.4",
     "next": "13.1.1",
