--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "polished": "^4.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.4.3",
     "react-locomotive-scroll": "^0.2.2",
     "react-yandex-metrika": "^2.6.0",
     "styled-components": "^5.3.6",
