--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
-
     "framer-motion": "^10.0.0",
     "next": "13.1.1",
     "next-seo": "^5.15.0",
@@ -20,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-yandex-metrika": "^2.6.0",
+    "resize-observer-polyfill": "^1.5.1",
     "styled-components": "^5.3.6",
     "ts-node": "^10.9.1",
     "typescript": "4.9.4"
