--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@vercel/analytics": "^1.1.1",
     "framer-motion": "^10.0.0",
     "next": "13.1.1",
     "next-seo": "^5.15.0",
